--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.1",
-    "mongoose": "^6.0.4"
+    "mongoose": "^6.0.4",
+    "multer": "^1.4.3"
   }
 }
